Revision history for FCGI-Buffer

0.03
	Fix '(in cleanup) Can't call method "READ" on an undefined value'
		Perl >= 5.14.0 only

0.02	Sat Jan 31 11:16:28 EST 2015
	Fix set_options
	Fix handling when content-type isn't set

0.01	Thu Jan 29 15:42:06 EST 2015
	First draft, clone from CGI::Buffer and object orient the code